made changes to kemper

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <select name="" class="select_only select-option" id="insurance_carrier">
               <option value="None Selected">-Select-</option>
             </select>
-            <div class="warning-text">
+            <div class="warning-text" id="kemper_warning">
               Warning: Please make sure you have selected a year in this Kemper file before uploading.
             </div>
           </div>
